--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "node-rest-es6",
-  "version": "1.0.0",
-  "description": "generic nodejs backend seed project",
-  "main": "index.js",
-  "scripts": {
-    "test": "gulp test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wolf-mtwo/node-rest-es6.git"
-  },
+  "name": "trading-monitor-api",
+  "version": "0.0.0",
+  "description": "trading monitoring helper",
   "keywords": [
     "seed",
     "nodejs",
@@ -20,10 +12,6 @@
   ],
   "author": "wolf.mtwo@outlook.com",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/wolf-mtwo/node-rest-es6/issues"
-  },
-  "homepage": "https://github.com/wolf-mtwo/node-rest-es6#readme",
   "devDependencies": {
     "babel-preset-latest": "^6.16.0",
     "eslint": "^3.7.1",
@@ -37,6 +25,7 @@
     "gulp-sequence": "^0.4.6"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.15.2",
     "cors": "^2.8.3",
     "crypto": "0.0.3",
@@ -45,10 +34,12 @@
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.4",
     "log4js": "^0.6.38",
+    "mongodb": "^3.0.2",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "socket.io": "^2.0.1",
+    "superagent": "^3.8.2",
     "uuid": "^3.1.0",
     "xlsx": "^0.9.13"
   }
