--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.4",
     "log4js": "^0.6.38",
+    "moment": "^2.20.1",
     "mongodb": "^3.0.2",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
